--- a/front/src/components/Banner.css
+++ b/front/src/components/Banner.css
@@ -22,18 +22,9 @@
     white-space: nowrap;
     font-weight: 800;
     font-size: 1.2rem;
-    letter-spacing: 0.02em;
+    letter-spacing: .2em;
     animation: slide 20s linear infinite;
     animation-direction: alternate;
-}
-
-@media (min-width: 600px) {
-    .banner-text {
-        letter-spacing: 0.1em;
-    }
-    .banner-text {
-        animation-duration: 15s;
-    }
 }
 
 @keyframes slide {
